# PresentMon

./: .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  PresentMon.props  PresentMon.sln  PresentMon2.sln  PresentMonService.args.json  README-CaptureApplication.md  README-ConsoleApplication.md  README-Service.md  README.md  THIRD_PARTY.txt  UpgradeLog.htm  presentdataConfig.cmake.in  testcert.cer  vcpkg-configuration.json  vcpkg.json  vcpkg.props
ETLTrimmer/: .gitignore  CliOptions.h  ETLTrimmer.args.json  ETLTrimmer.vcxproj  ETLTrimmer.vcxproj.filters  main.cpp
IntelPresentMon/: .gitignore  Common.props  RuntimeControl.props  metrics.csv
IntelPresentMon/AppCef/: .gitignore  AppCef.args.json  AppCef.rc  CefNano.args.json  CefNano.vcxproj  resource.h
IntelPresentMon/CliCore/: CliCore.vcxproj  CliCore.vcxproj.filters
IntelPresentMon/CommonUtilities/: BuildId.cpp  BuildId.h  CommonUtilities.vcxproj  CommonUtilities.vcxproj.filters  Exception.cpp  Exception.h  Hash.cpp  Hash.h  IntervalWaiter.cpp  IntervalWaiter.h  Macro.h  Math.cpp  Math.h  Memory.h  Meta.h  PrecisionWaiter.cpp  PrecisionWaiter.h  Qpc.cpp  Qpc.h  git_hash.h  vcpkg-configuration.json  vcpkg.json
IntelPresentMon/ControlLib/: Adl2Wrapper.cpp  Adl2Wrapper.h  AmdPowerTelemetryAdapter.cpp  AmdPowerTelemetryAdapter.h  AmdPowerTelemetryProvider.cpp  AmdPowerTelemetryProvider.h  ControlLib.vcxproj  ControlLib.vcxproj.filters  CpuTelemetry.cpp  CpuTelemetry.h  (+37 more)
PresentData/: Debug.cpp  Debug.hpp  GpuTrace.cpp  GpuTrace.hpp  MixedRealityTraceConsumer.cpp  MixedRealityTraceConsumer.hpp  NvidiaTraceConsumer.cpp  NvidiaTraceConsumer.hpp  PresentData.vcxproj  PresentData.vcxproj.filters  PresentMonTraceConsumer.cpp  PresentMonTraceConsumer.hpp  PresentMonTraceSession.cpp  PresentMonTraceSession.hpp  TraceConsumer.cpp  TraceConsumer.hpp  TraceLogging.cpp  TraceLogging.h  TraceSession.cpp  TraceSession.hpp  shims.cpp  shims.h
PresentMon/: CommandLine.cpp  Console.cpp  ConsoleApplication.sln  ConsumerThread.cpp  CsvOutput.cpp  LateStageReprojectionData.cpp  LateStageReprojectionData.hpp  LogSetup.cpp  MainThread.cpp  OutputThread.cpp  PresentMon.args.json  PresentMon.hpp  PresentMon.vcxproj  PresentMon.vcxproj.filters  Privilege.cpp  TraceSession.cpp  ddETWExternal.xml  ddETWExternalRcWrapper.rc
PresentMonTests/: PresentMonTests.vcxproj
Provider/: Intel-PresentMon.man  PresentMonProvider.cpp  PresentMonProvider.h  Provider.vcxproj  Provider.vcxproj.filters  README.md  Version.rc  dllmain.cpp  install_provider.cmd  uninstall_provider.cmd
Reflector/: Program.cs  Reflector.csproj  StructDumpers.h.scriban  Test1.h  Test2.h
Tests/: CommandLineTests.cpp  GoldEtlCsvTests.cpp  PresentMon.cpp  PresentMonCsv.h  PresentMonTests.args.json  PresentMonTests.cpp  PresentMonTests.h  PresentMonTests.runsettings.template  PresentMonTests.vcxproj  PresentMonTests.vcxproj.filters  README.md  packages.config
Tools/: collect_etw_info.cmd  compress_etls.cmd  create_gold_csvs.cmd  download_test_etls.cmd  etl_collection_timed.cmd  generate_options_header.cmd  generate_version_header.cmd  generate_version_sources.cmd  prune_processes.cmd  run_etw_list.cmd  run_tests.cmd  start_etl_collection.cmd  stop_etl_collection.cmd
scripts/: run_tests.cmd
(+1167 files in other folders)
